# subtitle-gen

./: .gitignore  README.md  config.example.toml  pyproject.toml
.codex/scripts/: srt_text.py
.codex/skills/proofread-subtitles/: SKILL.md
.codex/skills/proofread-subtitles/agents/: openai.yaml
.codex/skills/translate-subtitles/: SKILL.md
.codex/skills/translate-subtitles/agents/: openai.yaml
src/subtitle_gen/: __init__.py  aligner.py  asr.py  cache.py  cli.py  config.py  formats.py  hybrid_segmenter.py  llm.py  llm_segmenter.py  local_segmenter.py  media.py  pipeline.py  progress.py  segmenter.py  translator.py  types.py  vad.py
tests/: test_cache.py  test_config.py  test_formats.py  test_pipeline.py  test_segmenter.py  test_vad.py
