[project]
name = "subtitle-gen"
version = "0.1.0"
description = "Generate subtitles from audio/video with Qwen3 ASR, forced alignment, optional LLM segmentation, and translation."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
  "accelerate>=0.33",
  "blingfire>=0.1.8",
  "nagisa>=0.2.11",
  "rich>=15.0.0",
  "silero-vad>=6.0",
  "soundfile>=0.12",
  "soynlp>=0.0.493",
  "torch>=2.11,<2.12",
  "torchaudio>=2.11,<2.12",
  "transformers @ git+https://github.com/huggingface/transformers.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
subtitle-gen = "subtitle_gen.cli:main"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/subtitle_gen"]

[tool.hatch.metadata]
allow-direct-references = true
